[gd_scene load_steps=3 format=3 uid="uid://bln2tkj2kr0gg"]

[ext_resource type="PackedScene" uid="uid://bqp8itqm8nfpu" path="res://ActionBar/action_bar_slot.tscn" id="1_auanj"]
[ext_resource type="Script" path="res://ActionBar/action_bar.gd" id="1_w3k3g"]

[node name="ActionBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3k3g")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 30

[node name="PanelC" type="PanelContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1

[node name="Margin2" type="MarginContainer" parent="Margin/PanelC"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SlotContainer" type="HBoxContainer" parent="Margin/PanelC/Margin2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ActionBarSlot" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2

[node name="ActionBarSlot2" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2

[node name="ActionBarSlot3" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2

[node name="ActionBarSlot4" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2

[node name="ActionBarSlot5" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2

[node name="ActionBarSlot6" parent="Margin/PanelC/Margin2/SlotContainer" instance=ExtResource("1_auanj")]
layout_mode = 2
